Fix lecture description overflowing to lecture tag

--- a/assets/less/responsive.less
+++ b/assets/less/responsive.less
@@ -155,6 +155,7 @@
     }
 
     .lectures-list {
+        --tag-width: 0;
         .item-content-perex {
             padding-right: 2rem;
         }
