--- a/assets/less/site.less
+++ b/assets/less/site.less
@@ -890,6 +890,7 @@ body.no-js .js-only {
     list-style: none;
     overflow: hidden;
     border-top: 1px solid #d6d6d6;
+    --tag-width: 12rem;
 
     li {
         width: 100%;
@@ -986,6 +987,7 @@ body.no-js .js-only {
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            padding-right: var(--tag-width);
         }
 
         .item-text {
@@ -1006,8 +1008,7 @@ body.no-js .js-only {
         position: absolute;
         right: 0;
         top: 0;
-        width: 12rem;
-        padding-top: 2rem;
+        width: var(--tag-width);
     }
 
     .item-tag {
